// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CModalContent customize 1`] = `
<div>
  <div
    class="modal-content bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CModalContent component 1`] = `
<div>
  <div
    class="modal-content"
  >
    Test
  </div>
</div>
`;
